--- a/.env.example
+++ b/.env.example
@@ -2,34 +2,32 @@
 # Application Environment
 # =================================================================
 NODE_ENV="development"
+# APP_PORT=3000 
 
 # Disable Next.js telemetry
 NEXT_TELEMETRY_DISABLED=1
 
 # =================================================================
-# Database Configuration
+# Database Configuration (Update these for production deployment)
 # =================================================================
-# Development (Docker Compose)
 DATABASE_URL="postgresql://eteg:eteg_dev_password@localhost:5432/eteg"
-
-# Production (Update these for production deployment)
-# DATABASE_URL="postgresql://username:password@host:port/database"
 # DATABASE_NAME="eteg"
 # DATABASE_USER="eteg"
 # DATABASE_PASSWORD="your-secure-password-here"
+# DATABASE_PORT=5432
 
 # =================================================================
 # Application URLs
 # =================================================================
-# Application base URL
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-
-# API base URL
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 
 # =================================================================
 # Security Configuration
 # =================================================================
-
-# CORS origins (comma-separated)
 CORS_ORIGINS="http://localhost:3000,http://localhost:3001"
+
+# =================================================================
+# Docker-related Configuration
+# =================================================================
+# DOCKER_BUILD_TARGET="development"
