--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
         "moduleDetection": "force",
         "allowJs": true,
         "checkJs": true,
-        "jsx": "preserve",
-        "plugins": [{ "name": "next" }],
+        "jsx": "react-jsx",
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ],
         "incremental": true,
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
@@ -35,7 +39,8 @@
         "**/*.ts",
         "**/*.tsx",
         "./next-env.d.ts",
-        ".next/types/**/*.ts"
+        ".next/types/**/*.ts",
+        ".next/dev/types/**/*.ts"
     ],
     "exclude": ["node_modules", "dist", ".next"]
 }
