chore: fix eslint config

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint .",
+		"lint": "eslint . --cache",
 		"lint:fix": "eslint . --fix",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
-		"typecheck": "tsc --noEmit",
+		"type-check": "tsc --noEmit",
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
 		"db:studio": "bun prisma studio",
