--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"type-check": "tsc --noEmit",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage",
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
 		"db:studio": "bun prisma studio",
@@ -29,6 +32,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.7",
+		"gerador-validador-cpf": "^6.3.0",
 		"http-status-codes": "^2.3.0",
 		"next": "^16.1.0",
 		"postcss": "^8.5.6",
@@ -43,6 +47,9 @@
 		"@eslint/eslintrc": "^3.3.1",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
 		"@next/eslint-plugin-next": "^16.1.0",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.1",
+		"@testing-library/user-event": "^14.6.1",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.3.5",
 		"@types/eslint": "^9.6.1",
@@ -50,6 +57,7 @@
 		"@types/react-dom": "^19.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.20.0",
 		"@typescript-eslint/parser": "^8.20.0",
+		"@vitejs/plugin-react": "^5.1.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
@@ -57,6 +65,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-tailwindcss": "^4.0.0-beta.0",
 		"globals": "^16.0.0",
+		"jsdom": "^27.4.0",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-jsdoc": "^1.3.2",
@@ -66,6 +75,8 @@
 		"tw-animate-css": "^1.3.8",
 		"type-fest": "^4.37.0",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.20.0"
+		"typescript-eslint": "^8.20.0",
+		"vite-tsconfig-paths": "^6.0.3",
+		"vitest": "^4.0.16"
 	}
 }
