--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: bun install --frozen-lockfile
 
+      - name: Run Prisma generate
+        run: bun run db:generate
+
       - name: Run linter
         run: bun run lint
 
@@ -71,6 +74,9 @@ jobs:
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: bun install --frozen-lockfile
+
+      - name: Run Prisma generate
+        run: bun run db:generate
 
       - name: Run tests
         run: bun test
