--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-select": "^2.2.6",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tailwindcss/postcss": "^4.1.13",
 		"class-variance-authority": "^0.7.1",
@@ -34,14 +37,19 @@
 		"dotenv": "^16.4.7",
 		"gerador-validador-cpf": "^6.3.0",
 		"http-status-codes": "^2.3.0",
+		"imask": "^7.6.1",
+		"lucide-react": "^0.562.0",
 		"next": "^16.1.0",
+		"next-themes": "^0.4.6",
 		"postcss": "^8.5.6",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-hook-form": "^7.62.0",
-		"tailwind-merge": "^3.3.1",
+		"react-hook-form": "^7.70.0",
+		"react-imask": "^7.6.1",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.13",
-		"zod": "^4.1.9"
+		"zod": "^4.3.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
@@ -53,6 +61,7 @@
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.3.5",
 		"@types/eslint": "^9.6.1",
+		"@types/eslint-plugin-tailwindcss": "^3.17.0",
 		"@types/node": "^24.6.0",
 		"@types/react-dom": "^19.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.20.0",
@@ -72,7 +81,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"prisma": "^7.2.0",
 		"tsx": "^4.20.5",
-		"tw-animate-css": "^1.3.8",
+		"tw-animate-css": "^1.4.0",
 		"type-fest": "^4.37.0",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.20.0",
