chore: add production deployment infrastructure and documentation
- Add `Docker` multi-stage build with development and production targets
- Create `GitHub Actions` deployment workflow with health checks
- Add `.dockerignore` for optimized image building
- Update `docker-compose.yml` with health checks and improved configuration
- Add `TECHNICAL_DECISIONS.md` documenting architecture and technology choices
- Update `README` with deployment notes and version badges
- Update `package.json` version to 0.1.1 and improve docker scripts
- Clean up test comments in `customer-form.spec.tsx` and `page.spec.tsx`

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,42 +1,36 @@
-# Base image with Bun
-FROM oven/bun:1.2-alpine AS base
+FROM oven/bun:latest AS base
+
 WORKDIR /app
 
-# Development stage
-FROM base AS development
-COPY package.json bun.lock* ./
-RUN bun install
-COPY . .
-RUN mkdir -p .next
-EXPOSE 3000
-CMD ["bun", "dev"]
+FROM base AS dependencies
 
-# Dependencies for production
-FROM base AS deps
-COPY package.json bun.lock* ./
-RUN bun install --frozen-lockfile --production
-
-# Build stage
-FROM base AS builder
 COPY package.json bun.lock* ./
 RUN bun install --frozen-lockfile
+
+FROM dependencies AS development
+
+USER bun
 COPY . .
-RUN bun run db:generate && bun run build
-
-# Production stage
-FROM base AS production
-ENV NODE_ENV=production
-
-RUN addgroup --system --gid 1001 nodejs && \
-  adduser --system --uid 1001 nextjs
-
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-COPY --from=builder --chown=nextjs:nodejs /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/prisma ./prisma
-COPY --from=deps /app/node_modules ./node_modules
-
-USER nextjs
 EXPOSE 3000
+RUN bun run db:generate 
+CMD ["sh", "-c", "bun run db:migrate && bun run dev"]
 
-CMD ["bun", "start"]
+FROM dependencies AS builder
+
+COPY . .
+RUN bun run db:generate 
+RUN bun run build
+
+FROM base AS production
+
+COPY --from=builder /app/next.config.mjs ./
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/generated ./generated
+COPY --from=dependencies /app/node_modules ./node_modules
+
+USER bun
+EXPOSE 3000
+CMD ["sh", "-c", "bun run db:migrate && bun server.js"]
