--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "eteg",
-	"version": "0.1.0",
+	"version": "0.1.1",
+	"description": "PoC: system for registering users",
 	"type": "module",
 	"private": true,
 	"scripts": {
@@ -18,10 +19,10 @@
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
 		"db:studio": "bun prisma studio",
-		"docker:up": "docker compose -f docker/docker-compose.yml up -d",
-		"docker:up:build": "docker compose -f docker/docker-compose.yml up --build -d",
-		"docker:down": "docker compose -f docker/docker-compose.yml down",
-		"docker:logs": "docker compose -f docker/docker-compose.yml logs -f"
+		"docker:up": "docker compose --project-directory . -f docker/docker-compose.yml up -d",
+		"docker:up:build": "docker compose --project-directory . -f docker/docker-compose.yml up --build -d",
+		"docker:down": "docker compose --project-directory . -f docker/docker-compose.yml down -v",
+		"docker:logs": "docker compose --project-directory . -f docker/docker-compose.yml logs -f"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
