feat: add demo mode and improve UX
- Add CPF generator button (demo mode only)
- Add visual color indicators in color select
- Improve error handling with localized messages
- Add loading spinner to submit button
- Implement database connection timeouts (2s)
- Create `Spinner` and `Tooltip` components
- Extract shared validation schema
- Add `withTimeout()` database helper

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ NODE_ENV="development"
 # Disable Next.js telemetry
 NEXT_TELEMETRY_DISABLED=1
 
+# Enable demo mode features (CPF generator button, etc.)
+NEXT_PUBLIC_DEMO_ENABLED="false"
+
 # =================================================================
 # Database Configuration (Update these for production deployment)
 # =================================================================
