--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
 		"test:coverage": "vitest run --coverage",
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
+		"db:migrate:deploy": "bun prisma migrate deploy",
 		"db:studio": "bun prisma studio",
 		"docker:up": "docker compose --project-directory . -f docker/docker-compose.yml up -d",
+		"docker:up:db": "docker compose --project-directory . -f docker/docker-compose.yml up -d eteg-db",
+		"docker:up:app": "docker compose --project-directory . -f docker/docker-compose.yml up -d eteg-app",
 		"docker:up:build": "docker compose --project-directory . -f docker/docker-compose.yml up --build -d",
 		"docker:down": "docker compose --project-directory . -f docker/docker-compose.yml down -v",
-		"docker:logs": "docker compose --project-directory . -f docker/docker-compose.yml logs -f"
+		"docker:down:db": "docker compose --project-directory . -f docker/docker-compose.yml down -v eteg-db",
+		"docker:down:app": "docker compose --project-directory . -f docker/docker-compose.yml down -v eteg-app",
+		"docker:logs": "docker compose --project-directory . -f docker/docker-compose.yml logs -f",
+		"docker:logs:db": "docker compose --project-directory . -f docker/docker-compose.yml logs -f eteg-db",
+		"docker:logs:app": "docker compose --project-directory . -f docker/docker-compose.yml logs -f eteg-app"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
@@ -31,6 +38,7 @@
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tailwindcss/postcss": "^4.1.13",
 		"class-variance-authority": "^0.7.1",
@@ -42,6 +50,7 @@
 		"lucide-react": "^0.562.0",
 		"next": "^16.1.0",
 		"next-themes": "^0.4.6",
+		"pg": "^8.16.3",
 		"postcss": "^8.5.6",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
@@ -49,6 +58,7 @@
 		"react-imask": "^7.6.1",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
+		"prisma": "^7.2.0",
 		"tailwindcss": "^4.1.13",
 		"zod": "^4.3.5"
 	},
@@ -64,6 +74,7 @@
 		"@types/eslint": "^9.6.1",
 		"@types/eslint-plugin-tailwindcss": "^3.17.0",
 		"@types/node": "^24.6.0",
+		"@types/pg": "^8.16.0",
 		"@types/react-dom": "^19.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.20.0",
 		"@typescript-eslint/parser": "^8.20.0",
@@ -80,7 +91,6 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-jsdoc": "^1.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"prisma": "^7.2.0",
 		"tsx": "^4.20.5",
 		"tw-animate-css": "^1.4.0",
 		"type-fest": "^4.37.0",
