fix: align environment and form validation with conventions
- Renamed `APP_PORT` to `PORT` in `.env.example` and `docker-compose.yml`
- Standardized `docker-compose.yml` healthcheck formatting
- Added required error to email validation schema
- Improved form validation timing with `onSubmit` mode
- Enhanced test assertions and Radix UI compatibility

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Application Environment
 # =================================================================
 NODE_ENV="development"
-# APP_PORT=3000 
+# PORT=3000 
 
 # Disable Next.js telemetry
 NEXT_TELEMETRY_DISABLED=1
