--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     networks:
       - eteg-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eteg -d eteg"]
+      test: [ "CMD-SHELL", "pg_isready -U eteg -d eteg" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -32,10 +32,10 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV:-development}
       - DATABASE_URL=${DATABASE_URL:-postgresql://eteg:eteg_dev_password@eteg-db:5432/eteg}
-      - PORT=${APP_PORT:-3000}
+      - PORT=${PORT:-3000}
       - HOSTNAME=${HOSTNAME:-0.0.0.0}
     ports:
-      - "${APP_PORT:-3000}:3000"
+      - "${PORT:-3000}:3000"
     volumes:
       - .:/app
       - /app/node_modules
@@ -47,7 +47,7 @@ services:
       eteg-db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://app:3000/api/health || exit 1"]
+      test: [ "CMD-SHELL", "curl -f http://app:3000/api/health || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -55,6 +55,7 @@ services:
 
 volumes:
   eteg_postgres_data:
+
 
 networks:
   eteg-network:
