--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
   lint-and-typecheck:
     name: Lint, Format, and Type Check
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,7 +39,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run Prisma generate
-        run: bun run db:generate
+        run: DATABASE_URL=postgresql://eteg:eteg_dev_password@localhost:5432/eteg bun run db:generate
 
       - name: Run linter
         run: bun run lint
