feat(ci/cd): add CD workflow and update CI, Docker, and docs
- Add `.github/workflows/cd.yml` to enable continuous deployment
- Remove obsolete `.github/workflows/ci-migrate-deploy.yml
- Update `.github/workflows/ci.yml` for CI improvements
- Update `Dockerfile` and `docker-compose` (dev & prod) configurations
- Update `README.md` and `docs/ROADMAP.md` to reflect CI/CD changes
- Tweak `package.json`, `tests/setup.ts`, `next-env.d.ts`, and .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ NODE_ENV="development"
 NEXT_TELEMETRY_DISABLED=1
 
 # Enable demo mode features (CPF generator button, etc.)
-NEXT_PUBLIC_DEMO_ENABLED="false"
+NEXT_PUBLIC_DEMO_ENABLED=false
 
 # =================================================================
 # Database Configuration (Update these for production deployment)
@@ -16,7 +16,7 @@ NEXT_PUBLIC_DEMO_ENABLED="false"
 DATABASE_URL="postgresql://eteg:eteg_dev_password@localhost:5432/eteg"
 # DATABASE_NAME="eteg"
 # DATABASE_USER="eteg"
-# DATABASE_PASSWORD="your-secure-password-here"
+# DATABASE_PASSWORD="eteg_dev_password"
 # DATABASE_PORT=5432
 
 # =================================================================
