--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,8 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: bun install --frozen-lockfile
 
-      - name: Run Prisma generate
+      - name: Generate Prisma client
         run: bun run db:generate
 
-      - name: Run tests
-        run: bun run test
+      - name: Run Tests Suite with Coverage
+        run: bun run test:coverage
