--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  eteg-db:
+  db:
     image: postgres:17-alpine
     container_name: eteg-postgres
     restart: unless-stopped
@@ -15,36 +15,32 @@ services:
     networks:
       - eteg-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U eteg -d eteg"]
+      test: [ "CMD-SHELL", "pg_isready -U eteg -d eteg" ]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  eteg-app:
+  app:
     build:
       context: .
       dockerfile: docker/Dockerfile
       target: ${DOCKER_BUILD_TARGET:-development}
     container_name: eteg-app
     restart: unless-stopped
-    env_file: ".env"
     environment:
       - NODE_ENV=${NODE_ENV:-development}
-      - DATABASE_URL=${DATABASE_URL:-postgresql://eteg:eteg_dev_password@eteg-db:5432/eteg}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://eteg:eteg_dev_password@db:5432/eteg}
       - PORT=${PORT:-3000}
       - HOSTNAME=${HOSTNAME:-0.0.0.0}
     ports:
       - "${PORT:-3000}:3000"
-    volumes:
-      - .:/app
-      - /app/.next
     networks:
       - eteg-network
     depends_on:
-      eteg-db:
+      db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://app:3000/api/health || exit 1"]
+      test: [ "CMD-SHELL", "curl -f http://localhost:3000/api/health || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -52,6 +48,7 @@ services:
 
 volumes:
   eteg_postgres_data:
+
 
 networks:
   eteg-network:
