--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"dev:webpack": "next dev --webpack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint . --cache",
@@ -15,19 +16,23 @@
 		"type-check": "tsc --noEmit",
 		"test": "vitest run",
 		"test:watch": "vitest",
+		"test:quiet": "vitest run --reporter dot --silent",
 		"test:coverage": "vitest run --coverage",
+		"test:ci": "vitest run --reporter",
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
 		"ci:migrate": "bun run db:generate && bun run db:migrate:deploy",
 		"db:migrate:deploy": "bun prisma migrate deploy",
 		"db:studio": "bun prisma studio",
-		"docker:up": "docker compose --project-directory . -f docker/docker-compose.yml up -d",
-		"docker:up:build": "docker compose --project-directory . -f docker/docker-compose.yml up --build -d",
-		"docker:down": "docker compose --project-directory . -f docker/docker-compose.yml down -v",
-		"docker:logs": "docker compose --project-directory . -f docker/docker-compose.yml logs -f",
-		"docker:up:prod": "docker compose --project-directory . -f docker/docker-compose.prod.yml up --build -d",
-		"docker:down:prod": "docker compose --project-directory . -f docker/docker-compose.prod.yml down -v",
-		"docker:logs:prod": "docker compose --project-directory . -f docker/docker-compose.prod.yml logs -f"
+		"docker-compose": "docker compose --project-directory . -f docker/docker-compose.yml",
+		"docker-compose:prod": "docker compose --project-directory . -f docker/docker-compose.prod.yml",
+		"docker:up": "bun run docker-compose -- up -d",
+		"docker:up:build": "bun run docker-compose -- up --build -d",
+		"docker:down": "bun run docker-compose -- down -v",
+		"docker:logs": "bun run docker-compose -- logs -f",
+		"docker:up:prod": "bun run docker-compose:prod -- up --build -d",
+		"docker:down:prod": "bun run docker-compose:prod -- down -v",
+		"docker:logs:prod": "bun run docker-compose:prod -- logs -f"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
