chore: add `@vitest/coverage-v8` to deps and run formatter

--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"test:watch": "vitest",
 		"test:quiet": "vitest run --reporter dot --silent",
 		"test:coverage": "vitest run --coverage",
-		"test:ci": "vitest run --reporter",
 		"db:generate": "bun prisma generate",
 		"db:migrate": "bun prisma migrate dev",
 		"ci:migrate": "bun run db:generate && bun run db:migrate:deploy",
@@ -82,6 +81,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.20.0",
 		"@typescript-eslint/parser": "^8.20.0",
 		"@vitejs/plugin-react": "^5.1.2",
+		"@vitest/coverage-v8": "^4.0.17",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
