--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"docker:logs:prod": "bun run docker-compose:prod -- logs -f"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^10.2.0",
 		"@hookform/resolvers": "^5.2.2",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
@@ -54,13 +55,13 @@
 		"next-themes": "^0.4.6",
 		"pg": "^8.16.3",
 		"postcss": "^8.5.6",
+		"prisma": "^7.2.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-hook-form": "^7.70.0",
 		"react-imask": "^7.6.1",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
-		"prisma": "^7.2.0",
 		"tailwindcss": "^4.1.13",
 		"zod": "^4.3.5"
 	},
