fix(env): unify demo mode flag and clean up environment config
- Remove `NEXT_PUBLIC_DEMO_ENABLED` in favor of shared `DEMO_ENABLED`
- Update `.env.example`, Docker Compose, and Dockerfile to use consistent variable
- Update `env.ts` and constants for correct default handling and type safety
- Pass `demoEnabled` prop from page to `CustomerForm` for SSR/CSR consistency
- Fix minor typos and `className` issues in select component
- Remove unused code and redundant comments in affected files

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ NODE_ENV="development"
 NEXT_TELEMETRY_DISABLED=1
 
 # Enable demo mode features (CPF generator button, etc.)
-NEXT_PUBLIC_DEMO_ENABLED=false
+DEMO_ENABLED=false
 
 # =================================================================
 # Database Configuration (Update these for production deployment)
