--- a/.dockerignore
+++ b/.dockerignore
@@ -19,6 +19,7 @@ coverage
 *.spec.tsx
 
 # Development
+.env
 .env*.local
 .vscode
 .idea
@@ -40,3 +41,5 @@ Dockerfile*
 # Misc
 .DS_Store
 *.log
+*.tgz
+.vercel
